pyln-testing: add old_hsmsecret param to get_node.
This defaults to false for now: this breaks a lot of tests (since node ids change!)
once we switch to true.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "pytest-rerunfailures>=16.0.1",
   "pyln-testing",
   "pyln-proto",
+  "mnemonic>=0.21",
 ]
 package-mode = false
 [dependency-groups]
