deps: upgrade protobuf to >=6.33 and grpcio to >=1.76
Update protobuf and grpcio dependencies to use floating version ranges,
improving flexibility for downstream users.

Dependency updates:
- protobuf: ==6.32.1 -> >=6.33,<7
- grpcio: ==1.75.1 -> >=1.76
- grpcio-tools: ==1.75.1 -> >=1.76

Changes:
- Update pyproject.toml, contrib/pyln-grpc-proto/pyproject.toml,
  and contrib/pyln-testing/pyproject.toml
- Remove stale contrib/pyln-grpc-proto/uv.lock (referenced old protobuf3)
- Regenerate protobuf files with grpcio-tools 1.76
- Remove manual protoc installation from CI setup.sh, now relies on
  grpcio-tools bundled protoc for version consistency

Changelog-Changed: Upgraded protobuf to >=6.33 and grpcio to >=1.76 for better downstream compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ requires-python = ">=3.9.2,<4.0"
 dependencies = [
   "Mako>=1.1.6",
   "websocket-client>=1.2.3",
-  "grpcio-tools==1.75.1",
-  "grpcio==1.75.1",
-  # We want a specific version of protobuf to match CI's .github/scripts/setup.sh
-  "protobuf==6.32.1",
+  "grpcio-tools>=1.76",
+  "grpcio>=1.76",
+  "protobuf>=6.33,<7",
   "cryptography>=46",
   "pyln-client",
   "pyln-proto",
