--- a/contrib/pyln-grpc-proto/pyproject.toml
+++ b/contrib/pyln-grpc-proto/pyproject.toml
@@ -6,10 +6,10 @@ authors = [{ name = "Christian Decker", email = "decker@blockstream.com" }]
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.9,<4.0"
-dependencies = ["grpcio==1.75.1", "protobuf==6.32.1"]
+dependencies = ["grpcio>=1.76", "protobuf>=6.33,<7"]
 
 [dependency-groups]
-dev = ["grpcio==1.75.1", "mypy-protobuf<4", "grpcio-tools==1.75.1"]
+dev = ["grpcio>=1.76", "mypy-protobuf<4", "grpcio-tools>=1.76"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["pyln"]
