--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,8 +87,8 @@ jobs:
         run: |
           bash -x .github/scripts/setup.sh
           uv sync --all-extras --all-groups
-          # We're going to check BOLT quotes, so get the latest version
-          git clone https://github.com/lightning/bolts.git ../${BOLTDIR}
+          # We're going to check BOLT quotes, so get the latest version (or refresh)
+          git clone https://github.com/lightning/bolts.git ../${BOLTDIR} || git -C ../${BOLTDIR} pull
       - name: Configure
         run: ./configure --enable-debugbuild --enable-rust
       - name: Check source
@@ -250,8 +250,8 @@ jobs:
         run: |
           bash -x .github/scripts/setup.sh
           uv sync --all-extras --all-groups
-          # We're going to check BOLT quotes, so get the latest version
-          git clone https://github.com/lightning/bolts.git ../${BOLTDIR}
+          # We're going to check BOLT quotes, so get the latest version (or refresh)
+          git clone https://github.com/lightning/bolts.git ../${BOLTDIR} || git -C ../${BOLTDIR} pull
 
       - name: Download build
         uses: actions/download-artifact@v4
