askrene: move fork() entry point into its own file.
Now there's only one file clearly shared by both parent and child.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/plugins/askrene/Makefile
+++ b/plugins/askrene/Makefile
@@ -5,6 +5,7 @@ PLUGIN_ASKRENE_PARENT_SRC := \
 	plugins/askrene/reserve.c \
 
 PLUGIN_ASKRENE_CHILD_SRC := \
+	plugins/askrene/child/entry.c \
 	plugins/askrene/child/mcf.c \
 	plugins/askrene/child/dijkstra.c \
 	plugins/askrene/child/flow.c \
