bwatch: split into multiple files

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -17,8 +17,16 @@ PLUGIN_TXPREPARE_OBJS := $(PLUGIN_TXPREPARE_SRC:.c=.o)
 PLUGIN_BCLI_SRC := plugins/bcli.c
 PLUGIN_BCLI_OBJS := $(PLUGIN_BCLI_SRC:.c=.o)
 
-PLUGIN_BWATCH_SRC := plugins/bwatch/bwatch.c plugins/bwatch/bwatch_wiregen.c
-PLUGIN_BWATCH_HEADER := plugins/bwatch/bwatch_wiregen.h
+PLUGIN_BWATCH_SRC := plugins/bwatch/bwatch.c \
+	plugins/bwatch/bwatch_store.c \
+	plugins/bwatch/bwatch_scanner.c \
+	plugins/bwatch/bwatch_interface.c \
+	plugins/bwatch/bwatch_wiregen.c
+PLUGIN_BWATCH_HEADER := plugins/bwatch/bwatch.h \
+	plugins/bwatch/bwatch_store.h \
+	plugins/bwatch/bwatch_scanner.h \
+	plugins/bwatch/bwatch_interface.h \
+	plugins/bwatch/bwatch_wiregen.h
 PLUGIN_BWATCH_OBJS := $(PLUGIN_BWATCH_SRC:.c=.o)
 
 PLUGIN_COMMANDO_SRC := plugins/commando.c
@@ -197,6 +205,9 @@ plugins/exposesecret: $(PLUGIN_EXPOSESECRET_OBJS) $(PLUGIN_LIB_OBJS) libcommon.a
 plugins/bcli: $(PLUGIN_BCLI_OBJS) $(PLUGIN_LIB_OBJS) libcommon.a
 
 plugins/bwatch/bwatch.o: $(PLUGIN_BWATCH_HEADER)
+plugins/bwatch/bwatch_store.o: $(PLUGIN_BWATCH_HEADER)
+plugins/bwatch/bwatch_scanner.o: $(PLUGIN_BWATCH_HEADER)
+plugins/bwatch/bwatch_interface.o: $(PLUGIN_BWATCH_HEADER)
 plugins/bwatch/bwatch_wiregen.o: $(PLUGIN_BWATCH_HEADER)
 plugins/bwatch/bwatch: $(PLUGIN_BWATCH_OBJS) $(PLUGIN_LIB_OBJS) libcommon.a
 
